# src/routes.py
@@ -3,6 +3,7 @@ from .users import UserApi, UsersApi
 from .login import LoginApi, ForgotPasswordApi, ResetPasswordApi, ChangePasswordApi
 from .clients import ClientApi, ClientsApi
 from .cases import CaseApi, CasesApi
+from .docs import DocApi, DocsApi
 
 def initialize_routes(api):
 
@@ -29,3 +30,7 @@ def initialize_routes(api):
     #case model
     api.add_resource(CaseApi, '/api/v1/case')
     api.add_resource(CasesApi, '/api/v1/case/<id>')
+
+    #doc modle
+    api.add_resource(DocApi, '/api/v1/document')
+    api.add_resource(DocsApi, '/api/v1/document/<id>')
